--- a/templates/blog/base.html
+++ b/templates/blog/base.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
     {% block title %}<title>KingStar's Blog</title>{% endblock %}
 
     <style>
@@ -24,7 +25,7 @@
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="collapse navbar-collapse h2 text-white" id="navbarText">
+  <div class="collapse navbar-collapse h4 text-white" id="navbarText">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item ml-4">
         <a class="nav-link" href="{% url 'categoryview' 'dsa' %}">DSA</a>
@@ -44,12 +45,28 @@
       <li class="nav-item ml-4">
         <a class="nav-link" href="{% url 'categoryview' 'others' %}">OTHERS</a>
       </li>
+      <li class="nav-item ml-4">
+        <a class="nav-link" href="{% url 'write' %}">WRITE</a>
+      </li>
     </ul>
     <ul class = navbar-nav>
       {% if request.user.is_authenticated %}
+      
+      {% comment start %}
+        <li class="nav-item ml-4">
+          <a class="nav-link" href="{% url 'profile' request.user.id %}">Profile</a>
+        </li>
         <li class="nav-item ml-4">
           <a class="nav-link" href="{% url 'logout' %}">Logout</a>
         </li>
+        {% endcomment %}
+        <li class="nav-item mr-0">
+        {% block profile %}
+          {% include "blog/profiledropdown.html" %}
+        {% endblock %}
+        </li>
+
+
       {% else %}
         <li class="nav-item ml-4">
           <a class="nav-link" href="{% url 'login' %}">Login</a>
