--- a/templates/blog/category.html
+++ b/templates/blog/category.html
@@ -5,22 +5,11 @@
 {% block body %}
     <div class="containter">
         <div class="display-3 text-center"> {{ category }}</div>
-        <div class="row">   
+        <div class="row mr-0">   
             {% if articles %}
-                {% for article in articles %} 
-                <div class="col-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card">
-                        <img class="card-img-top img-fluid" style="height: 250px;"
-                            src="{{ article.image.url }}"
-                            alt="Card image cap">
-                        <div class="card-body">
-                            <h5 class="card-title h1">{{ article.title }}</h5>
-                            <p class="card-text"> {{ article.content|safe|truncatechars:50 }}</p>
-                            <a href="{% url 'detail'   article.slug  %}" class="btn btn-primary">Read More</a>
-                        </div>
-                    </div>
-                </div>
-                {% endfor %}
+                {% block content %}
+                    {% include "blog/content.html" %}
+                {% endblock %}
             {% else %}
                 No Articles to Display
             {% endif %}
