--- a/templates/blog/profile.html
+++ b/templates/blog/profile.html
@@ -24,7 +24,10 @@
                 <hr>
                 <div class="containter">
                     <h2>MY POSTS</h2>
-                    {% for article in articles %}
+                    {% block posts %}
+                        {% include 'blog/some_posts.html' with ariticles=articles %}
+                    {% endblock %}
+                    <!-- {% for article in articles %}
                         {% if forloop.counter < 4 %}
                         
                         <div class = "card" style="height: 70px;">
@@ -35,41 +38,27 @@
                         </div>  
                         </p>
                         {% endif %}
-                    {% endfor %}
+                    {% endfor %} -->
+                    <a href="{% url 'type' 'My Posts' %}" class="h5 btn btn-primary">ReadMore</a>
                     <hr>
 
                 </div>
                 <div class="containter">
                     <h2>My Fav</h2>
-                    {% for fav in profile.favourite.all %}
-                        {% if forloop.counter < 4 %}
-                        
-                        <div class = "card" style="height: 70px;">
-                            <div class="card-body d-flex justify-content-between">
-                                 <strong>{{fav.title}}</strong>
-                                <a href="{% url 'detail' fav.slug %}" class="h6 btn btn-primary">Read More</a>
-                            </div>
-                        </div>  
-                        </p>
-                        {% endif %}
-                    {% endfor %}
+                    {% block fav %}
+                        {% include 'blog/some_posts.html' with ariticles=profile.favourite.all %}
+                    {% endblock %}
+                    <a href="{% url 'type' 'My Favourite Posts' %}" class="h5 btn btn-primary">ReadMore</a>
                     <hr>
 
                 </div>
                 <div class="containter">
-                    <h2>MY POSTS</h2>
-                    {% for article in articles %}
-                        {% if forloop.counter < 4 %}
-                        
-                        <div class = "card" style="height: 70px;">
-                            <div class="card-body d-flex justify-content-between">
-                                 <strong>{{article.title}}</strong>
-                                <a href="{% url 'detail' article.slug %}" class="h6 btn btn-primary">Read More</a>
-                            </div>
-                        </div>  
-                        </p>
-                        {% endif %}
-                    {% endfor %}
+                    <h2>Read Later Posts</h2>
+                    {% block read %}
+                        {% include 'blog/some_posts.html' with ariticles=profile.read_later.all %}
+                    {% endblock %}
+                    <a href="{% url 'type' 'My Read Later Posts' %}" class="h5 btn btn-primary">ReadMore</a>
+
                     <hr>
 
                 </div>
