--- a/templates/blog/profiledropdown.html
+++ b/templates/blog/profiledropdown.html
@@ -8,9 +8,9 @@
   </button>
   <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownMenuLink">
     <a class="dropdown-item" href="{% url 'profile' request.user.id %}">Profile</a>
-    <a class="dropdown-item" href="#">My_Articles</a>
-    <a class="dropdown-item" href="#">My_Favs</a>
-    <a class="dropdown-item" href="#">ReadLater</a>
+    <a class="dropdown-item" href="{% url 'type' 'My Posts' %}">My_Articles</a>
+    <a class="dropdown-item" href="{% url 'type' 'My Favourite Posts' %}">My_Favs</a>
+    <a class="dropdown-item" href="{% url 'type' 'My Read Later Posts' %}">ReadLater</a>
     <a class="dropdown-item" href="{% url 'logout' %}">logout</a>
   </div>
 </div>
