--- a/templates/blog/some_posts.html
+++ b/templates/blog/some_posts.html
@@ -1,4 +1,4 @@
-        {% for fav in articles %}
+        {% for fav in posts %}
             {% if forloop.counter < 4 %}
             
             <div class = "card" style="height: 70px;">
