sending mail after post creation and post creation successful msg

--- a/templates/blog/create.html
+++ b/templates/blog/create.html
@@ -9,7 +9,7 @@
     {{fm.as_p}}
 
     <div class="d-grid gap-2 d-md-block py-2">
-        <button class="btn btn-primary" type="submit">Sign up</button>
+        <button class="btn btn-primary" type="submit">Publish</button>
     </div>
 
 </form>
