--- a/templates/blog/home.html
+++ b/templates/blog/home.html
@@ -1,6 +1,7 @@
 {% include "blog/base.html" %}
 
 {% block title %}<title>KingStar's Blog</title>{% endblock %}
+{% include "blog/messages.html" %}
 
 {% block body %}
     <div class="containter">
